--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
-    "pdfkit": "^0.14.0"
+    "pdfkit": "^0.14.0",
+    "sanitize-html": "^2.17.0",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
